--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
             rel="stylesheet"
         />
     </head>
@@ -18,11 +18,11 @@
         <!-- HEADER -->
         <header class="header">
             <nav class="header-bar">
-                <div class="header-logo">
+                <div class="header-bar-logo">
                     <img src="resume1.png" alt="logo" />
-                    <p class="header-logo-text">Information System Engineer</p>
+                    <p class="header-bar-logo-text">Information System Engineer</p>
                 </div>
-                <ul class="header-nav-links">
+                <ul class="header-bar-nav">
                     <li>Home</li>
                     <li>About</li>
                     <li>Projects</li>
@@ -35,49 +35,106 @@
                     <h1>Hi I’m Alp Eren Bayram</h1>
                     <p>
                         I'm a senior student in Information Systems Engineering focused on web
-                        development. Gaining experience in both frontend and backend with modern
-                        technologies like Next.js. Open to opportunities in software development and
-                        IT. Completing my mandatory internship (75 workdays) supported by my
-                        university.
+                        development.
                     </p>
-                    <button href="#cta" class="header-hero-button">Get in touch</button>
+                    <button href="#cta" class="header-hero-content-button">Get in touch</button>
                 </div>
-                <div class="header-hero-image"><img src="./resume5.png" /></div>
+                <div class="header-hero-image-container">
+                    <img class="header-hero-image" src="./resume5.png" />
+                </div>
             </div>
         </header>
         <!-- MAIN -->
         <main>
-            <section class="main-section-1">
-                <div class="whatido"><h1></h1></div>
-                <div class="box-1">
-                    <div class="image"></div>
-                    <p>subtext</p>
-                </div>
-                <div class="box-2">
-                    <div class="image"></div>
-                    <p>subtext</p>
-                </div>
-                <div class="box-3">
-                    <div class="image"></div>
-                    <p>subtext</p>
-                </div>
-                <div class="box-4">
-                    <div class="image"></div>
-                    <p>subtext</p>
+            <section class="main-section-1 main-section">
+                <div class="whatido"><strong>Yeteneklerim</strong></div>
+                <div class="boxes">
+                    <div class="box-1 box">
+                        <span class="box-header">Web Geliştirme</span>
+                        <div class="image-1 box-image">
+                            <img src="https://placehold.co/200x200" alt="" />
+                        </div>
+                        <p class="box-content">
+                            Modern ve Kullanıcı Dostu Web Siteleri Geliştirme: Kullanıcı dostu web
+                            siteleri tasarlayıp geliştiriyorum.
+                        </p>
+                    </div>
+                    <div class="box-2 box">
+                        <span class="box-header">Sistem Yönetimi</span>
+
+                        <div class="image-2 box-image">
+                            <img src="https://placehold.co/200x200" alt="" />
+                        </div>
+                        <span class="box-content">
+                            Linux, Windows Server ve Active Directory Uzmanlığı: Güvenilir sistem
+                            altyapıları oluşturuyor ve yönetiyorum.
+                        </span>
+                    </div>
+                    <div class="box-3 box">
+                        <span class="box-header">Otomasyon Sistemleri</span>
+                        <div class="image-3 box-image">
+                            <img src="https://placehold.co/200x200" alt="" />
+                        </div>
+                        <span class="box-content">
+                            İş Süreçlerini Otomatikleştirme Çözümleri: İş süreçlerini
+                            otomatikleştirerek verimliliği artırıyorum.
+                        </span>
+                    </div>
+                    <div class="box-4 box">
+                        <p class="box-header">ERP ve CRM</p>
+                        <div class="image-4 box-image">
+                            <img src="https://placehold.co/200x200" alt="" />
+                        </div>
+                        <p class="box-content">
+                            Kurumsal Kaynak Planlama ve Müşteri İlişkileri Yönetimi: İş
+                            süreçlerinizi optimize eden ERP ve CRM çözümleri sunuyorum.
+                        </p>
+                    </div>
                 </div>
             </section>
-            <section class="main-section-2">
-                <div class="inspiringquote"><h1></h1></div>
+
+            <section class="main-section-2 main-section">
+                <div class="about-container">
+                    <div class="about-header about">
+                        <img src="./about.png" alt="" />
+                        <div class="about-me">About Me</div>
+                    </div>
+                    <div class="about-content about">
+                        <p>
+                            Alp Eren Bayram, a senior student of Computer Engineering, I am focusing
+                            my career on web development. I enhance my skills by learning
+                            JavaScript-based technologies, especially Next.js, aiming to gain
+                            experience in both frontend and backend areas.
+                        </p>
+                        <p>
+                            With two different internship experiences, I acquired a diverse range of
+                            knowledge. I am open to working in software development, information
+                            technology, and system management fields to broaden my expertise and
+                            skills.
+                        </p>
+                    </div>
+                </div>
             </section>
-            <section class="main-section-3">
-                <div class="cta">
-                    <h1></h1>
-                    <p></p>
-                    <button>Sign up</button>
+
+            <section class="main-section-3 main-section">
+                <div class="cta-container">
+                    <div class="cta-content-container cta">
+                        <p class="cta-content-text-1">
+                            Let's collaborate for your projects and get in touch with me.
+                        </p>
+                        <p class="cta-content-text-2">
+                            Feel free to reach out by clicking the button on the right.
+                        </p>
+                    </div>
+                    <div class="cta-button-container cta">
+                        <button class="cta-button">Sign up</button>
+                    </div>
                 </div>
             </section>
         </main>
         <!-- FOOTER -->
-        <footer class="footer"><p>Copyright The Odin Project</p></footer>
+        
+            <div class="footer"><p>Copyright © The Odin Project</p></div>
+        
     </body>
 </html>
