Main ve Footer kısmını tamamladım.

--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
         <header class="header">
             <nav class="header-bar">
                 <div class="header-bar-logo">
-                    <img src="resume1.png" alt="logo" />
+                    <img src="./images/resume1.png" alt="logo" />
                     <p class="header-bar-logo-text">Information System Engineer</p>
                 </div>
                 <ul class="header-bar-nav">
-                    <li>Home</li>
-                    <li>About</li>
+                    <li>Home</li>                    
                     <li>Projects</li>
                     <li>Resume</li>
                     <li>Contact</li>
@@ -40,7 +39,7 @@
                     <button href="#cta" class="header-hero-content-button">Get in touch</button>
                 </div>
                 <div class="header-hero-image-container">
-                    <img class="header-hero-image" src="./resume5.png" />
+                    <img class="header-hero-image" src="./images/resume5.png" />
                 </div>
             </div>
         </header>
@@ -96,12 +95,12 @@
             <section class="main-section-2 main-section">
                 <div class="about-container">
                     <div class="about-header about">
-                        <img src="./about.png" alt="" />
+                        <img src="./images/about.png" alt="" />
                         <div class="about-me">About Me</div>
                     </div>
                     <div class="about-content about">
                         <p>
-                            Alp Eren Bayram, a senior student of Computer Engineering, I am focusing
+                            Alp Eren Bayram, a Information System Engineer, I am focusing
                             my career on web development. I enhance my skills by learning
                             JavaScript-based technologies, especially Next.js, aiming to gain
                             experience in both frontend and backend areas.
