Box iconları ekledim. About tuşunu kaldırdım.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <div class="box-1 box">
                         <span class="box-header">Web Geliştirme</span>
                         <div class="image-1 box-image">
-                            <img src="https://placehold.co/200x200" alt="" />
+                            <img src="./images/box1.jpg" alt="" />
                         </div>
                         <p class="box-content">
                             Modern ve Kullanıcı Dostu Web Siteleri Geliştirme: Kullanıcı dostu web
@@ -62,7 +62,7 @@
                         <span class="box-header">Sistem Yönetimi</span>
 
                         <div class="image-2 box-image">
-                            <img src="https://placehold.co/200x200" alt="" />
+                            <img src="./images/box2.jpg" alt="" />
                         </div>
                         <span class="box-content">
                             Linux, Windows Server ve Active Directory Uzmanlığı: Güvenilir sistem
@@ -72,7 +72,7 @@
                     <div class="box-3 box">
                         <span class="box-header">Otomasyon Sistemleri</span>
                         <div class="image-3 box-image">
-                            <img src="https://placehold.co/200x200" alt="" />
+                            <img src="./images/box3.jpg" alt="" />
                         </div>
                         <span class="box-content">
                             İş Süreçlerini Otomatikleştirme Çözümleri: İş süreçlerini
@@ -82,7 +82,7 @@
                     <div class="box-4 box">
                         <p class="box-header">ERP ve CRM</p>
                         <div class="image-4 box-image">
-                            <img src="https://placehold.co/200x200" alt="" />
+                            <img src="./images/box4.jpg" alt="" />
                         </div>
                         <p class="box-content">
                             Kurumsal Kaynak Planlama ve Müşteri İlişkileri Yönetimi: İş
