Responsive site düzenlemelerini öğrenme amacıyla denemeler yaptım.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <ul class="header-bar-nav">
                     <li>Home</li>                    
                     <li>Projects</li>
+                    <li>About</li>
                     <li>Resume</li>
                     <li>Contact</li>
                 </ul>
@@ -84,10 +85,10 @@
                         <div class="image-4 box-image">
                             <img src="./images/box4.jpg" alt="" />
                         </div>
-                        <p class="box-content">
+                        <span class="box-content">
                             Kurumsal Kaynak Planlama ve Müşteri İlişkileri Yönetimi: İş
                             süreçlerinizi optimize eden ERP ve CRM çözümleri sunuyorum.
-                        </p>
+                        </span>
                     </div>
                 </div>
             </section>
