--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </main>
         <!-- FOOTER -->
         
-            <div class="footer"><p>Copyright © The Odin Project</p></div>
+            <div class="footer"><p>Webpage by: Alp Eren Bayram</p></div>
         
     </body>
 </html>
