OpenGraph meta tagları ekledim.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Landing Page</title>
+		<meta property="og:title" content="Alp Bayram - Junior Web Developer" />
+<meta property="og:description" content="Explore Alp Bayram's portfolio of web development projects and skills." />
+<meta property="og:image" content="https://alpbayram.me/images/preview.jpg" />
+<meta property="og:url" content="https://alpbayram.me" />
+
+		<title>Alp Eren Bayram</title>
 		<link rel="stylesheet" href="style.css" />
 		<link rel="icon" href="./images/icon2.png" type="image/x-icon" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -27,7 +32,7 @@
                 <li><a href="#header-hero">Home</a></li>
                 <li><a class="project-link" href="https://github.com/alpbayram?tab=repositories">Projects</a></li>
                 <li><a href="#main-section-2">About</a></li>
-                <li><a class="cv-link" href="alpbayramCV.pdf" download target="_blank">CV</a></li>
+                <li><a class="cv-link" href="alpbayramCV.pdf" download>CV</a></li>
                 <li><a href="#main-section-3">Contact</a></li>
             </ul>
         </nav></div>
@@ -64,7 +69,7 @@
 						<span class="box-header">System Administration</span>
 
 						<div class="image-2 box-image">
-							<img src="./images/box2.jpg" alt="" />
+							<img src="./images/box3.jpg" alt="" />
 						</div>
 						<span class="box-content">
 							Basic System Administration: I continuously research to improve my knowledge related to Linux.
@@ -74,7 +79,7 @@
 					<div class="box-3 box">
 						<span class="box-header">Automation Systems</span>
 						<div class="image-3 box-image">
-							<img src="./images/box3.jpg" alt="" />
+							<img src="./images/box4.jpg" alt="" />
 						</div>
 						<span class="box-content">
                             Automating Business Processes: I aim to enhance efficiency by gaining knowledge about automation systems.
@@ -83,7 +88,7 @@
 					<div class="box-4 box">
 						<p class="box-header">Communication and Collaboration</p>
 						<div class="image-4 box-image">
-							<img src="./images/box4.jpg" alt="" />
+							<img src="./images/box2.jpg" alt="" />
 						</div>
 						<span class="box-content">
 							Teamwork and Communication: I am learning to collaborate effectively with individuals from different disciplines.
