--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
          <div class="sticky"><nav class="header-bar">
             <div class="header-bar-logo">
                 <img src="./images/resume1.png" alt="logo" />
-                <p class="header-bar-logo-text">Junior Web Developer</p>
+                <p class="header-bar-logo-text">Graduate in Information Systems Engineering</p>
             </div>
             <ul class="header-bar-nav">
                 <li><a href="#header-hero">Home</a></li>
@@ -42,7 +42,7 @@
 				<div class="header-hero-content">
 					<h1>Hi I’m Alp Eren Bayram</h1>
 					<p>
-						Junior Web Developer focused on enhancing skills in web development.
+						New graduate exploring opportunities to learn and grow in the technology field.
 					</p>
 					<a href="#main-section-3" class="header-hero-content-button">Contact me</a>
 				</div>
@@ -62,7 +62,7 @@
 							<img src="./images/box1.jpg" alt="" />
 						</div>
 						<p class="box-content">
-							Developing Modern and User-Friendly Websites: I design and develop user-friendly websites.
+							Web Development: I am learning how to build websites and applications, focusing on creating simple and effective user experiences.
 						</p>
 					</div>
 					<div class="box-2 box">
@@ -72,7 +72,7 @@
 							<img src="./images/box3.jpg" alt="" />
 						</div>
 						<span class="box-content">
-							Basic System Administration: I continuously research to improve my knowledge related to Linux.
+							IT Support & System Administration: I am gaining knowledge in system management and always looking for ways to improve my skills.
     </span>
 						</span>
 					</div>
@@ -82,7 +82,7 @@
 							<img src="./images/box4.jpg" alt="" />
 						</div>
 						<span class="box-content">
-                            Automating Business Processes: I aim to enhance efficiency by gaining knowledge about automation systems.
+                            Learning Automation: I am exploring automation systems to understand how they can help improve efficiency in business processes.
 						</span>
 					</div>
 					<div class="box-4 box">
@@ -91,7 +91,7 @@
 							<img src="./images/box2.jpg" alt="" />
 						</div>
 						<span class="box-content">
-							Teamwork and Communication: I am learning to collaborate effectively with individuals from different disciplines.
+							Collaboration: I’m working on improving my ability to work with different teams and communicate clearly.
 						</span>
 					</div>
 				</div>
@@ -105,10 +105,10 @@
 					</div>
 					<div class="about-content about">
 						<p>
-							Alp Eren Bayram, an Information Systems Engineer, is focusing his career on web development. I am enhancing my skills in JavaScript technologies, aiming to gain experience in both frontend and backend development.
+							I am a recent graduate in Information Systems Engineering with a keen interest in web development. I’m currently improving my skills and learning as much as I can in both frontend and backend development.
 						</p>
 						<p>
-							With two different internship experiences, I have acquired a diverse range of knowledge. I am open to opportunities in software development, information technology, and system management to broaden my expertise and skills.
+							After completing a couple of internships, I’ve gained valuable insights into the tech world. I’m open to learning more and exploring opportunities in various areas like software development, IT support, and system management.
 						</p>
 					</div>
 				</div>
