Thankspage link düzeltmesi.

--- a/thankspage.html
+++ b/thankspage.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     Gönderdiğiniz için teşekkür ederim. Gün içinde döneceğim.
-    <form action="http://192.168.1.105:3000/index.html">
+    <form action="http://alpbayram.me/index.html">
         <input type="submit" value="Siteye geri dönmek için tıklayabilirsiniz." />
     </form>
     
