thankspage düzenlemeleri. scroll düzeltme. min max height çalışmaları.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<p class="header-bar-logo-text">Bilişim Sistemleri Mühendisi</p>
 				</div>
 				<ul class="header-bar-nav">
-					<li><a href="#header-hero">Anasayfa</a></li>
+					<li><a href="#">Anasayfa</a></li>
 					<li>
 						<a class="project-link" href="https://github.com/alpbayram?tab=repositories"
 							>Projelerim</a
