--- a/thankspage.html
+++ b/thankspage.html
@@ -1,16 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    Gönderdiğiniz için teşekkür ederim. Gün içinde döneceğim.
-    <form action="https://alpbayram.me/index.html">
-        <input type="submit" value="Siteye geri dönmek için tıklayabilirsiniz." />
-    </form>
-    
-    
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta property="og:title" content="Alp Eren Bayram" />
+		<meta
+			property="og:description"
+			content="Alp Eren Bayram – Projects, skills, and professional details."
+		/>
+		<meta property="og:image" content="https://alpbayram.me/images/preview.jpg" />
+		<meta property="og:url" content="https://alpbayram.me" />
+
+		<title>Alp Eren Bayram</title>
+		<link rel="stylesheet" href="thankspagestyle.css" />
+		<link rel="icon" href="./images/icon2.png" type="image/x-icon" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,500;0,700;1,500;1,700&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+			rel="stylesheet"
+		/>
+		<script src="index.js" defer></script>
+	</head>
+	<body>
+		<div class="container">
+			<div class="centered-container">
+				<span class="span"
+					>Gönderdiğiniz için teşekkür ederim. Gün içinde geri döneceğim.</span
+				>
+				<form class="form" action="https://alpbayram.me/index.html">
+					<input
+						class="buton"
+						type="submit"
+						value="Siteye geri dönmek için tıklayabilirsiniz."
+					/>
+				</form>
+			</div>
+		</div>
+	</body>
 </html>
