--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 							<img src="./images/box3.jpg" alt="" />
 						</div>
 						<span class="box-content"
-							>Arma Group'da Vue.js ile arayüz geliştirme temelleri Yigisoft'ta temiz
-							kod prensiplerini uygulama fırsatı Jira ile Agile metodolojisi deneyimi
+							>Arma Group'da Vue.js ile arayüz geliştirme temelleri edindim. Yigisoft'ta temiz
+							kod prensiplerini uygulama fırsatı buldum. Jira ile Agile metodolojisi deneyimi kazandım
 						</span>
 					</div>
 					<div class="box-3 box">
@@ -126,7 +126,7 @@
 					<div class="about-content about">
 						<p>
 							🎓 2025'te <strong>Kocaeli Üniversitesi</strong> Bilişim Sistemleri
-							Mühendisliği'nden mezun olacağım. Derslerde edindiğim teorik bilgileri,
+							Mühendisliği'nden mezun oldum. Derslerde edindiğim teorik bilgileri,
 							stajlarımda pratiğe dökme fırsatı buldum.
 						</p>
 						<p>
