--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 		<link rel="icon" href="./images/icon2.png" type="image/x-icon" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,500;0,700;1,500;1,700&display=swap" rel="stylesheet">
+		<link
+			href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,500;0,700;1,500;1,700&display=swap"
+			rel="stylesheet"
+		/>
 		<link
 			href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
 			rel="stylesheet"
@@ -30,7 +33,7 @@
 		<div class="sticky">
 			<nav class="header-bar">
 				<div class="header-bar-logo">
-					<img src="./images/resume1.png" alt="logo" />
+					<img src="./images/sezi-tasarım/resim2.png" alt="logo" />
 					<p class="header-bar-logo-text">Bilişim Sistemleri Mühendisi</p>
 				</div>
 				<ul class="header-bar-nav">
@@ -74,7 +77,7 @@
 					<div class="box-1 box">
 						<span class="box-header">Şu Anda Odaklandıklarım</span>
 						<div class="image-1 box-image">
-							<img src="./images/box1.jpg" alt="Öğrenme" />
+							<img src="./images/sezi-tasarım/card1.png" alt="Öğrenme" />
 						</div>
 						<p class="box-content">
 							React.js ile component mimarisi üzerine çalışıyorum. Backend'de Node.js
@@ -86,17 +89,18 @@
 						<span class="box-header">Stajlarda Kazandıklarım</span>
 
 						<div class="image-2 box-image">
-							<img src="./images/box3.jpg" alt="" />
+							<img src="./images/sezi-tasarım/card2.png" alt="" />
 						</div>
 						<span class="box-content"
-							>Arma Group'da Vue.js ile arayüz geliştirme temelleri edindim. Yigisoft'ta temiz
-							kod prensiplerini uygulama fırsatı buldum. Jira ile Agile metodolojisi deneyimi kazandım
+							>Arma Group'da Vue.js ile arayüz geliştirme temelleri edindim.
+							Yigisoft'ta temiz kod prensiplerini uygulama fırsatı buldum. Jira ile
+							Agile metodolojisi deneyimi kazandım
 						</span>
 					</div>
 					<div class="box-3 box">
 						<span class="box-header">Merak Ettiklerim</span>
 						<div class="image-3 box-image">
-							<img src="./images/box4.jpg" alt="" />
+							<img src="./images/sezi-tasarım/card3.png" alt="" />
 						</div>
 						<span class="box-content">
 							TypeScript'te 2 Full-stack proje tamamladıktan sonra JAMstack ve static
@@ -107,7 +111,7 @@
 					<div class="box-4 box">
 						<p class="box-header">Takımda Nasıl Çalışırım?</p>
 						<div class="image-4 box-image">
-							<img src="./images/box2.jpg" alt="" />
+							<img src="./images/sezi-tasarım/card4.PNG" alt="" />
 						</div>
 						<span class="box-content"
 							>Yapıcı geri bildirim almaya açığım,Pair programming ile öğrenmeyi
@@ -120,24 +124,40 @@
 			<section id="main-section-2" class="main-section-2 main-section">
 				<div class="about-container">
 					<div class="about-header about">
-						<img src="./images/about.png" alt="" />
+						<img src="./images/sezi-tasarım/hakkimda.png" alt="" />
 						<div class="about-me">Hakkımda</div>
 					</div>
 					<div class="about-content about">
-						<p>
-							🎓 2025'te <strong>Kocaeli Üniversitesi</strong> Bilişim Sistemleri
-							Mühendisliği'nden mezun oldum. Derslerde edindiğim teorik bilgileri,
-							stajlarımda pratiğe dökme fırsatı buldum.
-						</p>
-						<p>
-							💼 <strong>Arma Group</strong>'daki stajımda: Vue.js ile responsive
-							tasarım öğrendim. Git versiyon kontrolünü proje bazında deneyimledim.
-						</p>
-						<p>
+						<div>
+							<img
+								src="images/sezi-tasarım/hakkimda1.PNG"
+								alt=""
+								class="float-left"
+							/>
+							<p class="hakkimda-paragraf">
+								2025'te <strong>Kocaeli Üniversitesi</strong> Bilişim Sistemleri
+								Mühendisliği'nden mezun oldum. Derslerde edindiğim teorik bilgileri,
+								stajlarımda pratiğe dökme fırsatı buldum.
+							</p>
+						</div>
+						<div>
+							<img
+								src="images/sezi-tasarım/hakkimda2.PNG"
+								alt=""
+								class="float-left"
+							/>
+							<p class="hakkimda-paragraf">
+								<strong>Arma Group</strong>'daki stajımda: Vue.js ile responsive
+								tasarım öğrendim. Git versiyon kontrolünü proje bazında
+								deneyimledim.
+							</p>
+						</div>
+
+						<p class="hakkimda-paragraf">
 							🌍 <strong>İngilizce</strong> seviyem: Teknik dokümanları okuyup
 							anlayabiliyor, temel iletişim kurabiliyorum.
 						</p>
-						<p>
+						<p class="hakkimda-paragraf">
 							🎯 <strong>Önümüzdeki 1 Yıl Hedeflerim:</strong>
 							2-3 tam stack proje geliştirmek Açık kaynak projelere küçük katkılar
 							yapmak İngilizce teknik sunumları anlayabilecek seviyeye gelmek
@@ -194,7 +214,6 @@
 								<label class="form-label">Mesajınız</label>
 
 								<textarea
-									
 									class="form-input-textarea"
 									name="message"
 									placeholder="Lütfen mesajınızı giriniz."
