--- a/index.html
+++ b/index.html
@@ -152,16 +152,29 @@
 								deneyimledim.
 							</p>
 						</div>
-
-						<p class="hakkimda-paragraf">
-							🌍 <strong>İngilizce</strong> seviyem: Teknik dokümanları okuyup
-							anlayabiliyor, temel iletişim kurabiliyorum.
-						</p>
-						<p class="hakkimda-paragraf">
-							🎯 <strong>Önümüzdeki 1 Yıl Hedeflerim:</strong>
-							2-3 tam stack proje geliştirmek Açık kaynak projelere küçük katkılar
-							yapmak İngilizce teknik sunumları anlayabilecek seviyeye gelmek
-						</p>
+						<div>
+							<img
+								src="images/sezi-tasarım/hakkimda3.PNG"
+								alt=""
+								class="float-left"
+							/>
+							<p class="hakkimda-paragraf">
+								<strong>İngilizce</strong> seviyem: Teknik dokümanları okuyup
+								anlayabiliyor, temel iletişim kurabiliyorum.
+							</p>
+						</div>
+						<div>
+							<img
+								src="images/sezi-tasarım/hakkimda4.PNG"
+								alt=""
+								class="float-left"
+							/>
+							<p class="hakkimda-paragraf">
+								<strong>Önümüzdeki 1 Yıl Hedeflerim:</strong>
+								2-3 tam stack proje geliştirmek Açık kaynak projelere küçük katkılar
+								yapmak İngilizce teknik sunumları anlayabilecek seviyeye gelmek
+							</p>
+						</div>
 					</div>
 				</div>
 			</section>
