--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<li><a href="#main-section-2">Hakkımda</a></li>
 					<li>
 						<a class="cv-link" href="alpbayramCV.pdf" download
-							>CV'mi İndir <small>(Son Güncelleme: Şubat 2025)</small></a
+							>CV'mi İndir <small>(Son Güncelleme: Mart 2025)</small></a
 						>
 					</li>
 					<li><a href="#main-section-3">İletişim</a></li>
@@ -81,7 +81,7 @@
 						</div>
 						<p class="box-content">
 							React.js ile component mimarisi üzerine çalışıyorum. Backend'de Node.js
-							ve Express.js kombinasyonunu öğreniyorum. TypeScript'e geçiş için temel
+							ve Express.js kombinasyonunu öğreniyorum. Nest.js'e geçiş için temel
 							atıyorum
 						</p>
 					</div>
@@ -104,7 +104,7 @@
 						</div>
 						<span class="box-content">
 							TypeScript'te 2 Full-stack proje tamamladıktan sonra JAMstack ve static
-							site generator'ları (Next.js, Gatsby) keşfetmek, Backend'de serverless
+							site generator'ları (Next.js, Astro) keşfetmek, Backend'de serverless
 							mimarilere giriş yapmak
 						</span>
 					</div>
