--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
 				</div>
 				<ul class="header-bar-nav">
 					<li><a href="#">Anasayfa</a></li>
+					<li><a href="#main-section-1">Projelerim</a></li>
 					<li>
 						<a class="project-link" href="https://github.com/alpbayram?tab=repositories"
-							>Projelerim</a
+							>GitHub</a
 						>
 					</li>
 					<li><a href="#main-section-2">Hakkımda</a></li>
@@ -71,7 +72,7 @@
 		</header>
 		<!-- MAIN -->
 		<main>
-			<section class="main-section-1 main-section projects-section">
+			<section id="main-section-1" class="main-section-1 main-section projects-section">
 				<div class="whatido"><strong>Projelerim</strong></div>
 				<div class="boxes">
 					<div class="box-1 box">
