Son projelerimle güncelledim.

--- a/index.html
+++ b/index.html
@@ -75,6 +75,62 @@
 			<section id="main-section-1" class="main-section-1 main-section projects-section">
 				<div class="whatido"><strong>Projelerim</strong></div>
 				<div class="boxes">
+					<div class="box-8 box">
+						<p class="box-header">ToDo List</p>
+						<div class="image-4 box-image">
+							<img class="projects" src="./images/project8.avif" alt="" />
+						</div>
+						<div class="links">
+							<a href="https://github.com/alpbayram/todo-list"
+								><img class="link-icon" src="./images/github-mark.svg" alt=""
+							/></a>
+							<a href="https://alpbayram.github.io/todo-list/"
+								><img class="link-icon" src="./images/external-link.svg" alt=""
+							/></a>
+						</div>
+						<span class="box-content"
+							>Bu proje, kullanıcıların görev ekleyip silebildiği, tamamlanan
+							görevleri işaretleyebildiği dinamik bir yapılacak listesi uygulamasıdır.
+							Görevler yerel depolamada saklanır ve sayfa yenilendiğinde korunur.
+						</span>
+					</div>
+					<div class="box-7 box">
+						<p class="box-header">Restaurant Page</p>
+						<div class="image-4 box-image">
+							<img class="projects" src="./images/project7.avif" alt="" />
+						</div>
+						<div class="links">
+							<a href="https://github.com/alpbayram/restaurant-page"
+								><img class="link-icon" src="./images/github-mark.svg" alt=""
+							/></a>
+							<a href="https://alpbayram.github.io/restaurant-page/"
+								><img class="link-icon" src="./images/external-link.svg" alt=""
+							/></a>
+						</div>
+						<span class="box-content">
+							Bu proje, modern ve duyarlı bir restoran web sayfası tasarımıdır. Menü
+							bölümü, iletişim formu ve görsel galeri içerir.
+						</span>
+					</div>
+					<div class="box-6 box">
+						<p class="box-header">Library</p>
+						<div class="image-4 box-image">
+							<img class="projects" src="./images/project6.avif" alt="" />
+						</div>
+						<div class="links">
+							<a href="https://github.com/alpbayram/library"
+								><img class="link-icon" src="./images/github-mark.svg" alt=""
+							/></a>
+							<a href="https://alpbayram.github.io/library/"
+								><img class="link-icon" src="./images/external-link.svg" alt=""
+							/></a>
+						</div>
+						<span class="box-content">
+							Bu proje, kullanıcıların kitap ekleyip düzenleyebildiği ve okundu
+							bilgisini işaretleyebildiği basit bir kütüphane uygulamasıdır. Kitap
+							verileri yerel depolamada tutulur.
+						</span>
+					</div>
 					<div class="box-1 box">
 						<span class="box-header">Tic Tac Toe</span>
 						<div class="image-1 box-image">
@@ -186,7 +242,9 @@
 							<img src="./images/sezi-tasarım/card1.png" alt="Öğrenme" />
 						</div>
 						<p class="box-content">
-							React.js ile component temelli mimariler üzerine çalışıyorum. Backend tarafında ise Node.js ve Express.js kullanarak temel sunucu yapıları geliştiriyorum. İlerleyen süreçte Nest.js'e geçiş yapmayı hedefliyorum.
+							React.js ile component temelli mimariler üzerine çalışıyorum. Backend
+							tarafında ise Node.js ve Express.js kullanarak temel sunucu yapıları
+							geliştiriyorum. İlerleyen süreçte Nest.js'e geçiş yapmayı hedefliyorum.
 						</p>
 					</div>
 					<div class="box-2 box">
@@ -196,7 +254,10 @@
 							<img src="./images/sezi-tasarım/card2.png" alt="" />
 						</div>
 						<span class="box-content"
-							>Arma Group’ta Vue.js ile arayüz geliştirme konusunda ilk pratik deneyimimi edindim. Yigisoft’ta ise temiz kod prensiplerini gerçek projelerde uygulama ve Jira ile Agile süreçlerine dahil olma fırsatım oldu.
+							>Arma Group’ta Vue.js ile arayüz geliştirme konusunda ilk pratik
+							deneyimimi edindim. Yigisoft’ta ise temiz kod prensiplerini gerçek
+							projelerde uygulama ve Jira ile Agile süreçlerine dahil olma fırsatım
+							oldu.
 						</span>
 					</div>
 					<div class="box-3 box">
@@ -205,7 +266,9 @@
 							<img src="./images/sezi-tasarım/card3.png" alt="" />
 						</div>
 						<span class="box-content">
-							Next.js ile üretim odaklı projeler geliştirmeye odaklanıyorum. Ek olarak, GraphQL, modern state yönetimi, kimlik doğrulama sistemleri ve dağıtım süreçleri (Vercel, Docker) gibi konulara ilgi duyuyorum.
+							Next.js ile üretim odaklı projeler geliştirmeye odaklanıyorum. Ek
+							olarak, GraphQL, modern state yönetimi, kimlik doğrulama sistemleri ve
+							dağıtım süreçleri (Vercel, Docker) gibi konulara ilgi duyuyorum.
 						</span>
 					</div>
 					<div class="box-4 box">
@@ -214,7 +277,9 @@
 							<img src="./images/sezi-tasarım/card4.PNG" alt="" />
 						</div>
 						<span class="box-content"
-							>Gerçek projelerde ekip deneyimim sınırlı olsa da, birlikte çalışmaya ve farklı bakış açılarını dinlemeye açık biriyim. Kod paylaşımı, geri bildirim ve ortak çözüm üretme konularında gelişmeye istekliyim.
+							>Gerçek projelerde ekip deneyimim sınırlı olsa da, birlikte çalışmaya ve
+							farklı bakış açılarını dinlemeye açık biriyim. Kod paylaşımı, geri
+							bildirim ve ortak çözüm üretme konularında gelişmeye istekliyim.
 						</span>
 					</div>
 				</div>
@@ -233,7 +298,9 @@
 								class="float-left"
 							/>
 							<p class="hakkimda-paragraf">
-								2025’te Kocaeli Üniversitesi Bilişim Sistemleri Mühendisliği bölümünden mezun oldum. Üniversitede edindiğim teorik temeli, bireysel projelerle ve yoğun bir öğrenme süreciyle pekiştiriyorum.
+								2025’te Kocaeli Üniversitesi Bilişim Sistemleri Mühendisliği
+								bölümünden mezun oldum. Üniversitede edindiğim teorik temeli,
+								bireysel projelerle ve yoğun bir öğrenme süreciyle pekiştiriyorum.
 							</p>
 						</div>
 						<div>
@@ -243,7 +310,12 @@
 								class="float-left"
 							/>
 							<p class="hakkimda-paragraf">
-								Şu anda, The Odin Project üzerinden Full-Stack JavaScript yolunu takip ediyorum. Bu self-paced bootcamp sürecinde, temel frontend bilgilerimi ileriye taşıyor ve backend tarafında Node.js, Express, PostgreSQL gibi teknolojilere yoğunlaşıyorum. Hedefim, bu programı 6–9 ay içinde disiplinli bir çalışmayla tamamlamak ve öğrendiklerimi güçlü projelerle somutlaştırmak.
+								Şu anda, The Odin Project üzerinden Full-Stack JavaScript yolunu
+								takip ediyorum. Bu self-paced bootcamp sürecinde, temel frontend
+								bilgilerimi ileriye taşıyor ve backend tarafında Node.js, Express,
+								PostgreSQL gibi teknolojilere yoğunlaşıyorum. Hedefim, bu programı
+								6–9 ay içinde disiplinli bir çalışmayla tamamlamak ve öğrendiklerimi
+								güçlü projelerle somutlaştırmak.
 							</p>
 						</div>
 						<div>
@@ -253,7 +325,8 @@
 								class="float-left"
 							/>
 							<p class="hakkimda-paragraf">
-								İngilizce seviyem, teknik dökümanları anlayacak düzeyde; yazılı kaynaklarla rahat çalışabiliyor, temel iletişimi sürdürebiliyorum.
+								İngilizce seviyem, teknik dökümanları anlayacak düzeyde; yazılı
+								kaynaklarla rahat çalışabiliyor, temel iletişimi sürdürebiliyorum.
 							</p>
 						</div>
 						<div>
@@ -263,7 +336,9 @@
 								class="float-left"
 							/>
 							<p class="hakkimda-paragraf">
-								Kısa vadede hedefim; 2-3 full-stack proje geliştirerek pratiğimi artırmak, açık kaynak projelere katkıda bulunmak ve bu süreçte gelişimimi destekleyecek bir mentordan rehberlik almak.
+								Kısa vadede hedefim; 2-3 full-stack proje geliştirerek pratiğimi
+								artırmak, açık kaynak projelere katkıda bulunmak ve bu süreçte
+								gelişimimi destekleyecek bir mentordan rehberlik almak.
 							</p>
 						</div>
 					</div>
