--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<li><a href="#main-section-2">Hakkımda</a></li>
 					<li>
 						<a class="cv-link" href="alpbayramCV.pdf" download
-							>CV'mi İndir <small>(Son Güncelleme: Nisan 2025)</small></a
+							>CV'mi İndir <small>(Son Güncelleme: Mayıs 2025)</small></a
 						>
 					</li>
 					<li><a href="#main-section-3">İletişim</a></li>
